# rtos-pedometer

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  _c9.txt  cmake-variants.yaml  main.cpp  mbed_app.json5  pyproject.toml  requirements.txt  tmp.txt
.cursor/: rules
.cursor/rules/: cpp-programming-guidelines-cursorrules-prompt-file.mdc  cpp-programming-guidelines.mdc
app/: Application.cpp  Application.hpp  Command.cpp  Command.hpp  MailHandle.hpp  MessageTypes.hpp
entry/: FirmwareEntry.hpp  HITLEntry.cpp  HITLProtocol.cpp  HITLProtocol.hpp  ProductionEntry.cpp  TestEntry.cpp
hitl/: HitlProtocol.cpp  HitlProtocol.hpp
imu/: Mpu6050Driver.cpp  Mpu6050Driver.hpp
led/: LedManager.cpp  LedManager.hpp  RecordingLed.cpp  RecordingLed.hpp
platform/: Gpio.cpp  Gpio.hpp  I2CProvider.cpp  I2CProvider.hpp  Platform.cpp  Platform.hpp  StringUtils.hpp
rtc/: RtcSessionStore.cpp  RtcSessionStore.hpp
scripts/: host-debug.ps1
session/: SessionManager.cpp  SessionManager.hpp
signal_processing/: SignalProcessing.cpp  SignalProcessing.hpp
step_detection/: OscillationTracker.cpp  OscillationTracker.hpp  StepDetector.cpp  StepDetector.hpp
test/: CMakeLists.txt  CMakePresets.json  README.md  test_main.cpp
test/imu/: Mpu6050DriverHostImpl.cpp  Mpu6050DriverTests.cpp
test/support/mocks/: MockGpioInput.hpp  MockI2CProvider.cpp  MockI2CProvider.hpp  MockTimer.hpp
test/tests/imu/: Mpu6050DriverTests.cpp
test/tests/signal_processing/: SignalProcessingTests.cpp
test/tests/step_detection/: OscillationTrackerTests.cpp  StepDetectorTests.cpp
tools/: __init__.py  debug_stream.py  hitl_runner.py  run_host_checks.py
tools/common/: logging.py
tools/hitl/: __init__.py  build.py  imu_device.py  protocol.py  runner.py  transport.py  validator.py
tools/notebooks/: dsp_debug_plot.ipynb
usb/: Command.cpp  Command.hpp  IUsbTransport.hpp  UsbInterface.cpp  UsbInterface.hpp  UsbTransport.cpp  UsbTransport.hpp
