[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tools"
version = "0.1.0"
dependencies = [
    "pyserial>=3.5",
    "notebook>=7.5.5",
    "matplotlib>=3.10.9",
    "pandas>=3.0.1",
    "numpy>=2.4.0",
]
description = "Tools for unit and HITL testing of rtos-pedometer firmware"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
dev = ["pyright[nodejs]>=1.1.408", "ruff>=0.15.7"]

[tool.setuptools.packages.find]
where = ["tools"]
